--- a/.github/workflows/main_cloudassignment12.yml
+++ b/.github/workflows/main_cloudassignment12.yml
@@ -28,7 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install flask ~= 1.1
+        run: pip install flask == 1.1
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
